Updates for Scala